src/test/custom/invalid/struct/structRedeclare.wacc
# Output:
# #semantic error#

# Program:

begin
  struct a is {int a}
  struct a is {char b}
  skip
end